--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Awe
 description: Description of project
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: 
+avatar: https://upload.wikimedia.org/wikipedia/commons/d/de/Loch_Katrine.jpg
 
 #
 # Flags below are optional
