--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Awe
 description: Description of project
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://www.loweaston.co.uk/uploads/images/Gallery/Scotland-Portrait/Scotland_01.jpg
+avatar: http://www.arranartgallery.com/cache/arran/0-0-1-670-1300/itemsfs_20966.JPG
 
 #
 # Flags below are optional
